IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/23/08: Andrew Noske's drawingtools plugin added to IMOD.

1/22/08: Converted patch2imod, imo2patch wrappers with dos2unix (In 3.11).

1/21/08: Stripped control characters from ssh version test and quoted drop
message to avoid script failure in Processchunks (In 3.11).

1/21/08: Added grouping capability to object list window to allow objects to
be edited in groups.

1/21/08: Synchronized model view object edit and object list after object
deletion, renumbering, and combining (In 3.11).

1/19/08: Added an On button to the Draw Data Type in model view object edit
to turn objects back on without having to select Contour/Mesh (In 3.11).

1/19/08: 3dmod creates a new empty object after the user deletes all objects
to avoid crashes (In 3.11).  Also eliminated most crashes with no object.

1/14/08: In eTomo handling an Imod directory path with embedded spaces.

1/14/08: In eTomo added the ability to reconnect to a parallel process.

1/13/08: Added a Multi-Z window to display successive slices in an array of 
panels.

1/10/08: Fixed Ccderaser to scale the model file to pixel coordinates on the
current stack even if the model came from a binned stack (In 3.11).

1/9/08: Fixed error from closing file twice with clip splitrgb (In 3.11).

1/8/08: Edpiecepoint can now be used to generate a piece list for a montage.
(In 3.11).

1/8/08: Fixed contour sort routine and made it work from 3D distances 
(In 3.11).

1/4/08: Translated PIP to plain vanilla Python to avoid version problems with
extension module.

1/4/08: Fixed scripts to handle space in IMOD_DIR and IMOD_TMPDIR.

12/28/07: Added the directory size to the Clean Up dialog.

12/27/07: Added an option to extracttilts to give a warning if the tilt angles
are suspicious; made copytomocoms use the option (In 3.11).

12/26/07: Added Etomo arguments to allow the reconstruction Setup dialog to be
completed automatically.  See etomo -h.
